Updater UI: Fix app table layout
There's too big of a gap between the last row in the app table and the
end of its card. Fix this by only padding the top of each `td`.

Bug: 456498884
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7539634
Auto-Submit: Noah Rose Ledesma <noahrose@google.com>
Commit-Queue: Noah Rose Ledesma <noahrose@google.com>
Cr-Commit-Position: refs/heads/main@{#1578286}

--- a/chrome/browser/resources/updater/app_list/app_list.css
+++ b/chrome/browser/resources/updater/app_list/app_list.css
@@ -61,7 +61,7 @@ th {
 }
 
 td {
-  padding: 8px 0;
+  padding-top: 8px;
 }
 
 .app-name {
